Add owners info implementation

--- a/src/api/shared/dependency-injection/application.yaml
+++ b/src/api/shared/dependency-injection/application.yaml
@@ -2,3 +2,4 @@ imports:
   - { resource: ./controllers/application.yaml }
   - { resource: ./shared/application.yaml }
   - { resource: ./users/application.yaml }
+  - { resource: ./owners/application.yaml }
