Add implementation for properties module

--- a/src/api/shared/dependency-injection/application.yaml
+++ b/src/api/shared/dependency-injection/application.yaml
@@ -3,3 +3,4 @@ imports:
   - { resource: ./shared/application.yaml }
   - { resource: ./users/application.yaml }
   - { resource: ./owners/application.yaml }
+  - { resource: ./properties/application.yaml }
