Add implementation for generate reports of owners

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-dependency-injection": "^3.2.4",
     "pg": "^8.16.3",
+    "puppeteer": "^24.32.0",
     "typeorm": "^0.3.27",
     "uuid": "^8.3.2"
   }
